@@ -1,0 +1,2 @@
+Welcome to "sessions/new" view!
+<%= render :file => "devise/sessions/new" %>
